<resources>
    <string name="app_name">SenaCap</string>
    <string name="senacap">SenaCap</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nome Sobrenome</string>
    <string name="nav_header_subtitle">fulano@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="start">Início</string>
    <string name="buy">Comprar título</string>
    <string name="mine">Meus Títulos</string>
    <string name="results">Resultados</string>
    <string name="rescue">Resgatar</string>
    <string name="configuration">Configuracões</string>
    <string name="logout">Sair</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="buyNow">Compre já!</string>
    <string name="info_credit_card">Informe os dados do seu cartão de crédito:</string>
    <string name="nome">NOME</string>
    <string name="cardNumber">NÚMERO DO CARTÃO</string>
    <string name="date">DATA DE VALIDADE (MM/AA)</string>
    <string name="cvv">CÓDIGO DE SEGURANCA (CVV)</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
</resources>
