<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/start"/>
        <item
                android:id="@+id/nav_buy"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/buy"/>
        <item
                android:id="@+id/nav_mine"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/mine"/>
        <item
                android:id="@+id/nav_results"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/results"/>

        <item
                android:id="@+id/nav_rescue"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/rescue"/>
        <item
                android:id="@+id/nav_config"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/configuration"/>
        <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/logout"/>
    </group>
</menu>
